# Cross-Asset-Market-Regime-Monitor

./: .gitignore  README.md  Untitled.ipynb  all_data.csv  app.py  bond.csv  core.py  data_collection.py  ecb_yields_eurozone_aaa.csv  ecb_yields_eurozone_all.csv  futures_term_structure.csv  fx_rates.csv  git_routine.txt  gold.csv  macro.csv  macro_indicators.csv  oil.csv  prototype.py  prototype_advanced.py  pyproject.toml  requirements.in  requirements.txt  short_rates.csv  sovereign_yields.csv  spy.csv  streamlit_to_display.py  temp.txt  test_output.txt  ui_design.py  usd.csv  vix.csv  wheat.csv
.devcontainer/: devcontainer.json
.github/workflows/: daily_refresh.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cross_asset_market_regime_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: all_data.csv  all_data.parquet  ecb_yields_eurozone_aaa.csv  ecb_yields_eurozone_aaa.parquet  ecb_yields_eurozone_all.csv  ecb_yields_eurozone_all.parquet  futures_term_structure.csv  fx_rates.csv  fx_rates.parquet  macro.csv  macro.parquet  macro_indicators.csv  macro_indicators.parquet  short_rates.csv  short_rates.parquet  sovereign_yields.csv  sovereign_yields.parquet  vix.csv  vix.parquet
src/dashboard/: __init__.py  config.py  core.py  data_collection.py
src/dashboard/charts/: __init__.py  equities.py  fixed_income.py  fx.py  macro.py  overview.py
tests/: conftest.py  test_charts_smoke.py  test_core.py  test_data_collection.py  test_regime.py
